#10 Create helper function for checking folder.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>